@@ -93,6 +93,16 @@ Bug Fixes
   close it in SolrCloud mode when a core with the same name already exists.
   (Mark Miller)
 
+* SOLR-4574: The Collections API will silently return success on an unknown
+  ACTION parameter. (Mark Miller)
+
+* SOLR-4576: Collections API validation errors should cause an exception on
+  clients and otherwise act as validation errors with the Core Admin API.
+  (Mark Miller)
+
+* SOLR-4577: The collections API should return responses (success or failure)
+  for each node it attempts to work with. (Mark Miller)
+
 Other Changes
 ----------------------
 
